src/parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | vdecl PERIOD decls
   4        | fdecl decls

   5  vdecl_list :
   6             | vdecl PERIOD vdecl_list

   7  vdecl : dtype ID

   8  fdecl : DEFINE ID LPAREN formals_list GIVES dtype RPAREN COLON LBRACE vdecl_list stmt_list RBRACE

   9  formals_list : vdecl
  10               | vdecl COMMA formals_list

  11  expr : NUMBERLIT
  12       | BOOLLIT
  13       | STRINGLIT
  14       | CHARLIT
  15       | ID
  16       | expr PLUS expr
  17       | expr MINUS expr
  18       | expr TIMES expr
  19       | expr INTDIV expr
  20       | expr DIV expr
  21       | expr LT expr
  22       | expr LEQ expr
  23       | expr GT expr
  24       | expr GEQ expr
  25       | expr AND expr
  26       | expr OR expr
  27       | ID ASSIGN expr
  28       | LPAREN expr RPAREN
  29       | ID LPAREN args_opt RPAREN

  30  args_opt :
  31           | args

  32  args : expr
  33       | expr args

  34  stmt_list :
  35            | stmt stmt_list

  36  stmt : LBRACE stmt_list RBRACE
  37       | dtype ID IS expr
  38       | IF expr COLON stmt ELSE COLON stmt
  39       | LOOP ID IN expr TO expr COLON stmt
  40       | LOOP ID IN expr TO expr BY expr COLON stmt
  41       | RETURN expr PERIOD

  42  dtype : NUMBER
  43        | BOOL
  44        | CHAR
  45        | STRING
  46        | dtype LIST

  47  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (47)
	decls : .  (2)

	DEFINE  shift 3
	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	EOF  reduce 2

	program  goto 8
	decls  goto 9
	vdecl  goto 10
	fdecl  goto 11
	dtype  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	fdecl : DEFINE . ID LPAREN formals_list GIVES dtype RPAREN COLON LBRACE vdecl_list stmt_list RBRACE  (8)

	ID  shift 13
	.  error


state 4
	dtype : NUMBER .  (42)

	.  reduce 42


state 5
	dtype : BOOL .  (43)

	.  reduce 43


state 6
	dtype : CHAR .  (44)

	.  reduce 44


state 7
	dtype : STRING .  (45)

	.  reduce 45


state 8
	%entry% : '\001' program .  (47)

	.  reduce 47


state 9
	program : decls . EOF  (1)

	EOF  shift 14
	.  error


state 10
	decls : vdecl . PERIOD decls  (3)

	PERIOD  shift 15
	.  error


state 11
	decls : fdecl . decls  (4)
	decls : .  (2)

	DEFINE  shift 3
	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	EOF  reduce 2

	decls  goto 16
	vdecl  goto 10
	fdecl  goto 11
	dtype  goto 12


state 12
	vdecl : dtype . ID  (7)
	dtype : dtype . LIST  (46)

	LIST  shift 17
	ID  shift 18
	.  error


state 13
	fdecl : DEFINE ID . LPAREN formals_list GIVES dtype RPAREN COLON LBRACE vdecl_list stmt_list RBRACE  (8)

	LPAREN  shift 19
	.  error


state 14
	program : decls EOF .  (1)

	.  reduce 1


state 15
	decls : vdecl PERIOD . decls  (3)
	decls : .  (2)

	DEFINE  shift 3
	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	EOF  reduce 2

	decls  goto 20
	vdecl  goto 10
	fdecl  goto 11
	dtype  goto 12


state 16
	decls : fdecl decls .  (4)

	.  reduce 4


state 17
	dtype : dtype LIST .  (46)

	.  reduce 46


state 18
	vdecl : dtype ID .  (7)

	.  reduce 7


state 19
	fdecl : DEFINE ID LPAREN . formals_list GIVES dtype RPAREN COLON LBRACE vdecl_list stmt_list RBRACE  (8)

	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	.  error

	vdecl  goto 21
	dtype  goto 12
	formals_list  goto 22


state 20
	decls : vdecl PERIOD decls .  (3)

	.  reduce 3


state 21
	formals_list : vdecl .  (9)
	formals_list : vdecl . COMMA formals_list  (10)

	COMMA  shift 23
	GIVES  reduce 9


state 22
	fdecl : DEFINE ID LPAREN formals_list . GIVES dtype RPAREN COLON LBRACE vdecl_list stmt_list RBRACE  (8)

	GIVES  shift 24
	.  error


state 23
	formals_list : vdecl COMMA . formals_list  (10)

	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	.  error

	vdecl  goto 21
	dtype  goto 12
	formals_list  goto 25


state 24
	fdecl : DEFINE ID LPAREN formals_list GIVES . dtype RPAREN COLON LBRACE vdecl_list stmt_list RBRACE  (8)

	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	.  error

	dtype  goto 26


state 25
	formals_list : vdecl COMMA formals_list .  (10)

	.  reduce 10


state 26
	fdecl : DEFINE ID LPAREN formals_list GIVES dtype . RPAREN COLON LBRACE vdecl_list stmt_list RBRACE  (8)
	dtype : dtype . LIST  (46)

	RPAREN  shift 27
	LIST  shift 17
	.  error


state 27
	fdecl : DEFINE ID LPAREN formals_list GIVES dtype RPAREN . COLON LBRACE vdecl_list stmt_list RBRACE  (8)

	COLON  shift 28
	.  error


state 28
	fdecl : DEFINE ID LPAREN formals_list GIVES dtype RPAREN COLON . LBRACE vdecl_list stmt_list RBRACE  (8)

	LBRACE  shift 29
	.  error


29: shift/reduce conflict (shift 4, reduce 5) on NUMBER
29: shift/reduce conflict (shift 5, reduce 5) on BOOL
29: shift/reduce conflict (shift 6, reduce 5) on CHAR
29: shift/reduce conflict (shift 7, reduce 5) on STRING
state 29
	fdecl : DEFINE ID LPAREN formals_list GIVES dtype RPAREN COLON LBRACE . vdecl_list stmt_list RBRACE  (8)
	vdecl_list : .  (5)

	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	LBRACE  reduce 5
	RBRACE  reduce 5
	IF  reduce 5
	LOOP  reduce 5
	RETURN  reduce 5

	vdecl  goto 30
	vdecl_list  goto 31
	dtype  goto 12


state 30
	vdecl_list : vdecl . PERIOD vdecl_list  (6)

	PERIOD  shift 32
	.  error


state 31
	fdecl : DEFINE ID LPAREN formals_list GIVES dtype RPAREN COLON LBRACE vdecl_list . stmt_list RBRACE  (8)
	stmt_list : .  (34)

	LBRACE  shift 33
	IF  shift 34
	LOOP  shift 35
	RETURN  shift 36
	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	RBRACE  reduce 34

	dtype  goto 37
	stmt_list  goto 38
	stmt  goto 39


32: shift/reduce conflict (shift 4, reduce 5) on NUMBER
32: shift/reduce conflict (shift 5, reduce 5) on BOOL
32: shift/reduce conflict (shift 6, reduce 5) on CHAR
32: shift/reduce conflict (shift 7, reduce 5) on STRING
state 32
	vdecl_list : vdecl PERIOD . vdecl_list  (6)
	vdecl_list : .  (5)

	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	LBRACE  reduce 5
	RBRACE  reduce 5
	IF  reduce 5
	LOOP  reduce 5
	RETURN  reduce 5

	vdecl  goto 30
	vdecl_list  goto 40
	dtype  goto 12


state 33
	stmt : LBRACE . stmt_list RBRACE  (36)
	stmt_list : .  (34)

	LBRACE  shift 33
	IF  shift 34
	LOOP  shift 35
	RETURN  shift 36
	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	RBRACE  reduce 34

	dtype  goto 37
	stmt_list  goto 41
	stmt  goto 39


state 34
	stmt : IF . expr COLON stmt ELSE COLON stmt  (38)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 48


state 35
	stmt : LOOP . ID IN expr TO expr COLON stmt  (39)
	stmt : LOOP . ID IN expr TO expr BY expr COLON stmt  (40)

	ID  shift 49
	.  error


state 36
	stmt : RETURN . expr PERIOD  (41)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 50


state 37
	stmt : dtype . ID IS expr  (37)
	dtype : dtype . LIST  (46)

	LIST  shift 17
	ID  shift 51
	.  error


state 38
	fdecl : DEFINE ID LPAREN formals_list GIVES dtype RPAREN COLON LBRACE vdecl_list stmt_list . RBRACE  (8)

	RBRACE  shift 52
	.  error


state 39
	stmt_list : stmt . stmt_list  (35)
	stmt_list : .  (34)

	LBRACE  shift 33
	IF  shift 34
	LOOP  shift 35
	RETURN  shift 36
	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	RBRACE  reduce 34

	dtype  goto 37
	stmt_list  goto 53
	stmt  goto 39


state 40
	vdecl_list : vdecl PERIOD vdecl_list .  (6)

	.  reduce 6


state 41
	stmt : LBRACE stmt_list . RBRACE  (36)

	RBRACE  shift 54
	.  error


state 42
	expr : LPAREN . expr RPAREN  (28)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 55


state 43
	expr : NUMBERLIT .  (11)

	.  reduce 11


state 44
	expr : BOOLLIT .  (12)

	.  reduce 12


state 45
	expr : CHARLIT .  (14)

	.  reduce 14


state 46
	expr : STRINGLIT .  (13)

	.  reduce 13


47: shift/reduce conflict (shift 56, reduce 15) on LPAREN
state 47
	expr : ID .  (15)
	expr : ID . ASSIGN expr  (27)
	expr : ID . LPAREN args_opt RPAREN  (29)

	LPAREN  shift 56
	ASSIGN  shift 57
	RPAREN  reduce 15
	LBRACE  reduce 15
	RBRACE  reduce 15
	PERIOD  reduce 15
	COLON  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	TIMES  reduce 15
	INTDIV  reduce 15
	DIV  reduce 15
	LT  reduce 15
	LEQ  reduce 15
	GT  reduce 15
	GEQ  reduce 15
	AND  reduce 15
	OR  reduce 15
	IF  reduce 15
	ELSE  reduce 15
	LOOP  reduce 15
	TO  reduce 15
	BY  reduce 15
	RETURN  reduce 15
	NUMBER  reduce 15
	BOOL  reduce 15
	CHAR  reduce 15
	STRING  reduce 15
	NUMBERLIT  reduce 15
	BOOLLIT  reduce 15
	CHARLIT  reduce 15
	STRINGLIT  reduce 15
	ID  reduce 15


state 48
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)
	stmt : IF expr . COLON stmt ELSE COLON stmt  (38)

	COLON  shift 58
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	.  error


state 49
	stmt : LOOP ID . IN expr TO expr COLON stmt  (39)
	stmt : LOOP ID . IN expr TO expr BY expr COLON stmt  (40)

	IN  shift 70
	.  error


state 50
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)
	stmt : RETURN expr . PERIOD  (41)

	PERIOD  shift 71
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	.  error


state 51
	stmt : dtype ID . IS expr  (37)

	IS  shift 72
	.  error


state 52
	fdecl : DEFINE ID LPAREN formals_list GIVES dtype RPAREN COLON LBRACE vdecl_list stmt_list RBRACE .  (8)

	.  reduce 8


state 53
	stmt_list : stmt stmt_list .  (35)

	.  reduce 35


state 54
	stmt : LBRACE stmt_list RBRACE .  (36)

	.  reduce 36


state 55
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)
	expr : LPAREN expr . RPAREN  (28)

	RPAREN  shift 73
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	.  error


state 56
	expr : ID LPAREN . args_opt RPAREN  (29)
	args_opt : .  (30)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	RPAREN  reduce 30

	expr  goto 74
	args_opt  goto 75
	args  goto 76


state 57
	expr : ID ASSIGN . expr  (27)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 77


state 58
	stmt : IF expr COLON . stmt ELSE COLON stmt  (38)

	LBRACE  shift 33
	IF  shift 34
	LOOP  shift 35
	RETURN  shift 36
	NUMBER  shift 4
	BOOL  shift 5
	CHAR  shift 6
	STRING  shift 7
	.  error

	dtype  goto 37
	stmt  goto 78


state 59
	expr : expr PLUS . expr  (16)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 79


state 60
	expr : expr MINUS . expr  (17)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 80


state 61
	expr : expr TIMES . expr  (18)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 81


state 62
	expr : expr INTDIV . expr  (19)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 82


state 63
	expr : expr DIV . expr  (20)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 83


state 64
	expr : expr LT . expr  (21)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 84


state 65
	expr : expr LEQ . expr  (22)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 85


state 66
	expr : expr GT . expr  (23)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 86


state 67
	expr : expr GEQ . expr  (24)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 87


state 68
	expr : expr AND . expr  (25)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 88


state 69
	expr : expr OR . expr  (26)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 89


state 70
	stmt : LOOP ID IN . expr TO expr COLON stmt  (39)
	stmt : LOOP ID IN . expr TO expr BY expr COLON stmt  (40)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 90


state 71
	stmt : RETURN expr PERIOD .  (41)

	.  reduce 41


state 72
	stmt : dtype ID IS . expr  (37)

	LPAREN  shift 42
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	.  error

	expr  goto 91


state 73
	expr : LPAREN expr RPAREN .  (28)

	.  reduce 28


state 74
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)
	args : expr .  (32)
	args : expr . args  (33)

	LPAREN  shift 42
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	NUMBERLIT  shift 43
	BOOLLIT  shift 44
	CHARLIT  shift 45
	STRINGLIT  shift 46
	ID  shift 47
	RPAREN  reduce 32

	expr  goto 74
	args  goto 92


state 75
	expr : ID LPAREN args_opt . RPAREN  (29)

	RPAREN  shift 93
	.  error


state 76
	args_opt : args .  (31)

	.  reduce 31


77: shift/reduce conflict (shift 59, reduce 27) on PLUS
77: shift/reduce conflict (shift 60, reduce 27) on MINUS
77: shift/reduce conflict (shift 61, reduce 27) on TIMES
77: shift/reduce conflict (shift 62, reduce 27) on INTDIV
77: shift/reduce conflict (shift 63, reduce 27) on DIV
77: shift/reduce conflict (shift 64, reduce 27) on LT
77: shift/reduce conflict (shift 65, reduce 27) on LEQ
77: shift/reduce conflict (shift 66, reduce 27) on GT
77: shift/reduce conflict (shift 67, reduce 27) on GEQ
77: shift/reduce conflict (shift 68, reduce 27) on AND
77: shift/reduce conflict (shift 69, reduce 27) on OR
state 77
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)
	expr : ID ASSIGN expr .  (27)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	LPAREN  reduce 27
	RPAREN  reduce 27
	LBRACE  reduce 27
	RBRACE  reduce 27
	PERIOD  reduce 27
	COLON  reduce 27
	IF  reduce 27
	ELSE  reduce 27
	LOOP  reduce 27
	TO  reduce 27
	BY  reduce 27
	RETURN  reduce 27
	NUMBER  reduce 27
	BOOL  reduce 27
	CHAR  reduce 27
	STRING  reduce 27
	NUMBERLIT  reduce 27
	BOOLLIT  reduce 27
	CHARLIT  reduce 27
	STRINGLIT  reduce 27
	ID  reduce 27


state 78
	stmt : IF expr COLON stmt . ELSE COLON stmt  (38)

	ELSE  shift 94
	.  error


state 79
	expr : expr . PLUS expr  (16)
	expr : expr PLUS expr .  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)

	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LPAREN  reduce 16
	RPAREN  reduce 16
	LBRACE  reduce 16
	RBRACE  reduce 16
	PERIOD  reduce 16
	COLON  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	LT  reduce 16
	LEQ  reduce 16
	GT  reduce 16
	GEQ  reduce 16
	AND  reduce 16
	OR  reduce 16
	IF  reduce 16
	ELSE  reduce 16
	LOOP  reduce 16
	TO  reduce 16
	BY  reduce 16
	RETURN  reduce 16
	NUMBER  reduce 16
	BOOL  reduce 16
	CHAR  reduce 16
	STRING  reduce 16
	NUMBERLIT  reduce 16
	BOOLLIT  reduce 16
	CHARLIT  reduce 16
	STRINGLIT  reduce 16
	ID  reduce 16


state 80
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr MINUS expr .  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)

	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LPAREN  reduce 17
	RPAREN  reduce 17
	LBRACE  reduce 17
	RBRACE  reduce 17
	PERIOD  reduce 17
	COLON  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	LT  reduce 17
	LEQ  reduce 17
	GT  reduce 17
	GEQ  reduce 17
	AND  reduce 17
	OR  reduce 17
	IF  reduce 17
	ELSE  reduce 17
	LOOP  reduce 17
	TO  reduce 17
	BY  reduce 17
	RETURN  reduce 17
	NUMBER  reduce 17
	BOOL  reduce 17
	CHAR  reduce 17
	STRING  reduce 17
	NUMBERLIT  reduce 17
	BOOLLIT  reduce 17
	CHARLIT  reduce 17
	STRINGLIT  reduce 17
	ID  reduce 17


state 81
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr TIMES expr .  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)

	.  reduce 18


state 82
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr INTDIV expr .  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)

	.  reduce 19


state 83
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr DIV expr .  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)

	.  reduce 20


state 84
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr LT expr .  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LPAREN  reduce 21
	RPAREN  reduce 21
	LBRACE  reduce 21
	RBRACE  reduce 21
	PERIOD  reduce 21
	COLON  reduce 21
	AND  reduce 21
	OR  reduce 21
	IF  reduce 21
	ELSE  reduce 21
	LOOP  reduce 21
	TO  reduce 21
	BY  reduce 21
	RETURN  reduce 21
	NUMBER  reduce 21
	BOOL  reduce 21
	CHAR  reduce 21
	STRING  reduce 21
	NUMBERLIT  reduce 21
	BOOLLIT  reduce 21
	CHARLIT  reduce 21
	STRINGLIT  reduce 21
	ID  reduce 21


state 85
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr LEQ expr .  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LPAREN  reduce 22
	RPAREN  reduce 22
	LBRACE  reduce 22
	RBRACE  reduce 22
	PERIOD  reduce 22
	COLON  reduce 22
	AND  reduce 22
	OR  reduce 22
	IF  reduce 22
	ELSE  reduce 22
	LOOP  reduce 22
	TO  reduce 22
	BY  reduce 22
	RETURN  reduce 22
	NUMBER  reduce 22
	BOOL  reduce 22
	CHAR  reduce 22
	STRING  reduce 22
	NUMBERLIT  reduce 22
	BOOLLIT  reduce 22
	CHARLIT  reduce 22
	STRINGLIT  reduce 22
	ID  reduce 22


state 86
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr GT expr .  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LPAREN  reduce 23
	RPAREN  reduce 23
	LBRACE  reduce 23
	RBRACE  reduce 23
	PERIOD  reduce 23
	COLON  reduce 23
	AND  reduce 23
	OR  reduce 23
	IF  reduce 23
	ELSE  reduce 23
	LOOP  reduce 23
	TO  reduce 23
	BY  reduce 23
	RETURN  reduce 23
	NUMBER  reduce 23
	BOOL  reduce 23
	CHAR  reduce 23
	STRING  reduce 23
	NUMBERLIT  reduce 23
	BOOLLIT  reduce 23
	CHARLIT  reduce 23
	STRINGLIT  reduce 23
	ID  reduce 23


state 87
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr GEQ expr .  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LPAREN  reduce 24
	RPAREN  reduce 24
	LBRACE  reduce 24
	RBRACE  reduce 24
	PERIOD  reduce 24
	COLON  reduce 24
	AND  reduce 24
	OR  reduce 24
	IF  reduce 24
	ELSE  reduce 24
	LOOP  reduce 24
	TO  reduce 24
	BY  reduce 24
	RETURN  reduce 24
	NUMBER  reduce 24
	BOOL  reduce 24
	CHAR  reduce 24
	STRING  reduce 24
	NUMBERLIT  reduce 24
	BOOLLIT  reduce 24
	CHARLIT  reduce 24
	STRINGLIT  reduce 24
	ID  reduce 24


state 88
	expr : expr . PLUS expr  (16)
	expr : expr . MINUS expr  (17)
	expr : expr . TIMES expr  (18)
	expr : expr . INTDIV expr  (19)
	expr : expr . DIV expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . LEQ expr  (22)
	expr : expr . GT expr  (23)
	expr : expr . GEQ expr  (24)
	expr : expr . AND expr  (25)
	expr : expr AND expr .  (25)
	expr : expr . OR expr  (26)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	INTDIV  shift 62
	DIV  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	LPAREN  reduce 25
	RPAREN  reduce 25
	LBRACE  reduce 25
	RBRACE  reduce 25
	PERIOD  reduce 25
	COLON  reduce 25
	AND  reduce 25
	OR  reduce 25
	IF  reduce 25
	ELSE  reduce 25
	LOOP  reduce 25
	TO  reduce 25
	BY  reduce 25
	RETURN  reduce 25
	NUMBER  reduce 25
	BOOL  reduce 25
	CHAR  reduce 25
	STRING  reduce 25
	NUMBERLIT  reduce 25
	BOOLLIT  reduce 25
	CHARLIT  reduce 25
	STRINGLIT  reduce 25
	ID  reduce 25

